mention that calling SetFaceName() with an invalid facename will invalidate the font object (see #10475)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@60392 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775